<resources>
  <string name="app_name">Sensors Test</string>


  <string name="title_activity_test2">TestActivity2</string>
  <string name="first_fragment_label">First Fragment</string>
  <!-- Strings used for fragments for navigation -->
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>
  <string name="hello_first_fragment">Hello first fragment</string>


  <string name="check_sensors">Проверить датчики телефона</string>


  <string name="check_vibrator">Проверка вибратора</string>
  <string name="vibrate">Вибрировать</string>
  <string name="tick">Тик</string>
  <string name="click">Клик</string>
  <string name="double_click">Двойной клик</string>
  <string name="heavy_click">Сильный клик</string>
  <string name="sos">SOS</string>
  <string name="send_text">Озвучить текст</string>
  <string name="input_text">Введите текст</string>


  <string name="check_flash">Проверка фонарика</string>
  <string name="flash">Включить</string>
  <string name="strobe">Стробоскоп</string>
  <string name="sos_flash">SOS</string>
  <string name="strobe_text">Промигать текст</string>



  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string-array name="sensors">
    <item>Вибратор</item>
    <item>Фонарик</item>
    <item>Экран</item>
    <item>Подсветка экрана</item>
    <item>Акселерометр</item>
    <item>Гироскоп</item>
    <item>Магнитометр</item>
    <item>Датчик приближения</item>
    <item>Датчик света</item>
    <item>Микрофон</item>
    <item>Разговорный линамик</item>
    <item>Основной динамик</item>
    <item>Фронтальная камера</item>
    <item>Основная камера</item>
    <item>Сканер отпечатков</item>
  </string-array>
</resources>