<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".TestVibrator">


  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/vibrate_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="64dp"
    android:text="@string/vibrate"
    app:layout_constraintBottom_toTopOf="@+id/flash_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/flash_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:text="@string/click"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/vibrate_button" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/strobe_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:text="@string/double_click"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/flash_button" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/heavy_click_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:text="@string/heavy_click"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/strobe_button" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/tick_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:text="@string/tick"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/heavy_click_button" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/sos_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:text="@string/sos"
    android:textAlignment="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tick_button" />

  <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
    android:id="@+id/vibrate_text_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_gravity="bottom|end"
    android:text="@string/send_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/vibrate_text_layout" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/vibrate_text_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginHorizontal="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/sos_button">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/vibrate_text_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/input_text"
      android:imeOptions="actionNext"
      android:inputType="textCapSentences"
      android:maxLines="1"
      android:textSize="18sp" />
  </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>